# GT4S2RC

./: .gitignore  CHANGELOG.md  COMBINEDCARLIST.txt  COMBINEDEVENTLIST.txt  COMBINEDLIST.txt  COMBINEDRACEDATA.txt  COMBINEDTRACKLIST.txt  CRCPRNG.hs  GenerateCombinedList.hs  MT19937.hs  NECESSITIES.txt  PermutationTester.hs  RACELIST.txt  README  README.md  SpecII-Cracking.cabal  SpecIIData.hs  UnviabilityTester.hs  VIABILITY.txt  ViabilityTester.hs
Data/: CARLIST.txt  FUNCLIST.txt  LABELS.txt  NECESSITY.txt  NECESSITYVALUES.txt  NECESSITYVALUES_ANYPERCENT.txt  RACELIST.txt  RACENAMES.txt  SINGLERACECLASS.txt  SINGLERACEIDS.txt  SINGLERACENAMES.txt  TRACKCLASS.txt  TRACKIDS.txt  TRACKNAMES.txt  VIABILITY.txt
Documentation/: Spec-II-Randomizer-Cracking.tex
FairnessUI/: FairnessUI.java
lib/S2RA/: Bruteforce.hs  CRCPRNG.hs  Concurrent.hs  DataFiles.hs  MT19937.hs  Maths.hs  S2Data.hs  Typedefs.hs
lm-hb/: hashbreaker.c
s2a/: BitflipTester.hs  Existence100.hs  Fairness.hs  GenerateCombinedList.hs  HashBreaker.hs  ListAnalyzer.hs  PermutationTester.hs  RandomVerifier.hs  SeedAnalyzer.hs  SeedTracks.hs  StdinAnalyzer.hs  Tester100.hs  UnviabilityTester.hs  ViabilityTester.hs
