cabal-version:      3.4
name:               SpecII-Cracking
version:            0.1.2.0
synopsis:           An attempt at breaking Spec II's randomizer algorithm.
description:        See https://github.com/MF42-DZH/GT4S2RC/blob/master/README.md
homepage:           https://github.com/MF42-DZH/GT4S2RC
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Azullia
maintainer:         crashmacompilers@gmail.com
-- copyright:
category:           Game
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wextra

common shared-depends
    ghc-options: -O2 -ferror-spans
    build-depends:
        base ^>=4.20.0.0,
        array ^>=0.5.7.0,
        text ^>=2.1.1,
        containers ^>=0.7
    default-language: GHC2021

common executable-depends
    ghc-options: -static -optc-static -optl-static -threaded -rtsopts -with-rtsopts=-N -O2 -ferror-spans

library Common
    import:
        warnings,
        shared-depends
    exposed-modules:
        S2RA.CRCPRNG,
        S2RA.Typedefs,
        S2RA.S2Data,
        S2RA.DataFiles,
        S2RA.Concurrent,
        S2RA.Bruteforce
    other-modules:
        S2RA.MT19937
    -- other-extensions:
    hs-source-dirs:   lib

executable SpecII-Seed-Analyzer
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          SeedAnalyzer.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-Generate-Combined-Lists
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          GenerateCombinedList.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-List-Analyzer
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          ListAnalyzer.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-Stdin-Analyzer
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          StdinAnalyzer.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-Viability-Tester
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          ViabilityTester.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-Unviability-Tester
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          UnviabilityTester.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-Permutation-Tester
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          PermutationTester.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a

executable SpecII-Bitflip-Tester
    import:
        warnings,
        shared-depends,
        executable-depends
    main-is:          BitflipTester.hs
    -- other-modules:
    -- other-extensions:
    build-depends: SpecII-Cracking:Common

    hs-source-dirs:   s2a
